# rust-dns-benchmark

./: .gitignore  Cargo.toml  README.md  build.rs  query_domains.csv  resolvers.txt  run_test.sh
docs/: CHANGELOG.md  INSTALL.md  USAGE.md
resolvers/: resolvers.txt  resolvers_doh.txt  resolvers_dot.txt  resolvers_ipv6.txt
src/: bench.rs  cli.rs  dns.rs  domains.rs  main.rs  output.rs  rdns.rs  record.rs  resolver.rs  stats.rs  telemetry.rs  transport.rs
